--- a/index.html
+++ b/index.html
@@ -18,9 +18,23 @@
 
     <body>
         <div class="container">
-            <h1>Meet Our Team</h1>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quasi error voluptatibus, nulla excepturi rerum laudantium sapiente! Impedit autem temporibus assumenda fugiat quo molestias!.</p>
+            <header>        <!--START HEADER-->
+
+                <h1 class="pink-color">Meet Our Team</h1>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quasi error voluptatibus, nulla excepturi rerum laudantium sapiente! Impedit autem temporibus assumenda fugiat quo molestias!.</p>
+
+            </header>
+
+            <div class="cards">
+
+                <div class="card 1 background-cards">
+                    <img src="img/male1.png" alt="Designer Visit Card">
+                </div>
+
+            </div>
+            
         </div>
     </body>
 </html>
