End first stage of the main

--- a/index.html
+++ b/index.html
@@ -26,14 +26,45 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quasi error voluptatibus, nulla excepturi rerum laudantium sapiente! Impedit autem temporibus assumenda fugiat quo molestias!.</p>
 
             </header>
+            <main>          <!--START MAIN-->
 
-            <div class="cards">
+                <div class="cards">
 
-                <div class="card 1 background-cards">
-                    <img src="img/male1.png" alt="Designer Visit Card">
+                    <div class="single-card background-cards">
+
+                        <img src="img/male1.png" alt="Marco Bianci card">
+
+                        <div class="float-right">
+                            <span class="white-color padding-bottom"> MARCO BIANCHI</span>  <br>
+                            <span class="white-color">Designer</span>  <br>
+                            <span class="email-color">marcobianchi@team.com</span>
+                        </div>
+                    </div>
+
+                    <div class="single-card background-cards">
+
+                        <img src="img/female1.png" alt="Laura Rossi card">
+
+                        <div class="float-right">
+                            <span class="white-color padding-bottom"> LAURA ROSSI</span>  <br>
+                            <span class="white-color">Front-end Developer</span>  <br>
+                            <span class="email-color">laurarossi@team.com</span>
+                        </div>
+                    </div>
+
+                    <div class="single-card background-cards">
+
+                        <img src="img/male2.png" alt="Giorgio Verdi Card">
+                        
+                        <div class="float-right">
+                            <span class="white-color padding-bottom"> GIORGIO VERDI</span>  <br>
+                            <span class="white-color">Back-end Developer</span>  <br>
+                            <span class="email-color">giorgioverdi@team.com</span>
+                        </div>
+                    </div>
+
                 </div>
-
-            </div>
+            </main>
             
         </div>
     </body>
