END PROJECT AFTER REVIEW

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quasi error voluptatibus, nulla excepturi rerum laudantium sapiente! Impedit autem temporibus assumenda fugiat quo molestias!.</p>
 
             </header>
-            
+
             <main>          <!--START MAIN-->
 
                 <div class="cards clearfix">    <!--CARDS-->
@@ -42,7 +42,7 @@
                         </div>
                     </div>
 
-                    <div class="single-card background-cards card-margin">  <!--SECOND CARD-->
+                    <div class="single-card background-cards">  <!--SECOND CARD-->
 
                         <img src="img/female1.png" alt="Laura Rossi card">
 
@@ -75,7 +75,7 @@
                         </div>
                     </div>
 
-                    <div class="single-card background-cards card-margin">  <!--FIFTH CARD-->
+                    <div class="single-card background-cards">  <!--FIFTH CARD-->
 
                         <img src="img/male3.png" alt="Roberto Lorem card">
 
